[package]
name = "rmkmount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
log ="0.4"
stderrlog = "0.6"
simple_logger = "4.3"
ssh2 = "0.9"
libc = "0.2"
libssh2-sys = "0.3"
fuser = "0.14"
itertools = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with ="3.7"
clap = { version = "4.5", features = ["derive"] }
sftp_rkfs = { path = "../sftp_rkfs" }

[[bin]]
name = "rmkmount"
path = "src/main.rs"

