[package]
name = "sftp_rkfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9"
libssh2-sys = "0.3"
fuser = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.7"
log = "0.4"
simple_logger = "4.3"
thiserror = "1.0"
libc = "0.2"

[lib]
name = "sftp_rkfs"
path = "src/lib.rs"

