[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.14"
libc = "0.2"
clap = "4.5"
log = "0.4"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"

[[bin]]
name = "simple"
path = "src/main.rs"

